--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', process.env.GOOGLE_ANALYTICS_KEY);
+      gtag('config', 'G-X5MQC4MZ7Y');
     </script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/XSafe-symbol.svg" />
